# signal-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
signal_cli/: __init__.py  cli.py  config.py  docker.py  py.typed  signal_client.py
signal_cli/data/: docker-compose.yml
tests/: __init__.py  conftest.py  test_client.py  test_config.py
