[project]
name = "signal-cli-py"
version = "0.5.0"
description = "Reusable Python library and CLI for sending text and images via signal-cli-rest-api. Supports both individuals (phone numbers) and groups."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "signal-cli maintainers" }
]
requires-python = ">=3.10"
keywords = ["signal", "signal-cli", "signal-messaging", "notifications", "delivery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer[all]>=0.12.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25.0",
    "ruff>=0.4.0",
    "black>=24.0",
]

[project.scripts]
signal-cli = "signal_cli.cli:app"

[project.urls]
Homepage = "https://github.com/jower999/signal-cli"
Repository = "https://github.com/jower999/signal-cli"
Issues = "https://github.com/jower999/signal-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["signal_cli"]
include = ["signal_cli/py.typed", "signal_cli/data/**"]

[tool.hatch.build.targets.sdist]
include = [
    "signal_cli/",
    "tests/",
    "README.md",
    "pyproject.toml",
    "signal_cli/data/**",
]
exclude = [
    "**/__pycache__/",
    "**/*.pyc",
    ".pytest_cache/",
    ".vscode/",
    ".venv/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
